src/main/resources/static/css/cas.css
/* ... */
.form-button {
    display: block;
    margin: 0.5rem 0;
}

.form-button-inline {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    margin: 0.25rem 0;
}

.form-button .mdc-button,
.form-button-inline .mdc-button {
    width: 100%;
    min-width: fit-content;
    text-transform: none;
    white-space: nowrap;
    height: 56px;
}

.form-button-inline .mdc-button {
    flex-basis: 48%;
    margin: 0.25rem 0;
    padding: 0 8px;
}

.form-button .button-osf-navbar,
.form-button-inline .button-osf-navbar {
    background-color: var(--cas-theme-osf-navbar, #263947);
}

.form-button .button-osf-grey,
.form-button-inline .button-osf-grey {
    background-color: var(--cas-theme-osf-grey, #eeeeee);
    box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.2), 0px 4px 4px 0px rgba(0, 0, 0, 0.14), 0px 3px 8px 0px rgba(0, 0, 0, 0.12);
}

.form-button .button-osf-green,
.form-button-inline .button-osf-green {
    background-color: var(--cas-theme-osf-green, #357935);
}

.form-button .button-osf-blue,
.form-button-inline .button-osf-blue {
    background-color: var(--cas-theme-osf-blue, #1b6d85);
}

.form-button .button-osf-red,
.form-button-inline .button-osf-red {
    background-color: var(--cas-theme-osf-red, #b52b27);
}

.form-button .button-osf-disabled,
.form-button-inline .button-osf-disabled {
    background-color: var(--cas-theme-osf-disabled, #EFEFEF);
}

.mdc-top-app-bar__row,
.mdc-top-app-bar__row .mdc-top-app-bar__section {
    min-width: fit-content;
}

.mdc-top-app-bar__row .cas-brand,
.mdc-top-app-bar__row .cas-brand-text {
    margin-right: 0.5em!important;
    margin-left: 0.5em!important;
}

.cas-brand-text .navbar-link {
    text-decoration: none;
    color: #F7F7F7;
}

.cas-brand-text .navbar-link:hover,
.cas-brand-text .navbar-link:visited,
.cas-brand-text .navbar-link:active {
    color: #F7F7F7;
}

.mdc-top-app-bar__row .button-osf-disabled {
    opacity: 0.8;
    cursor: not-allowed;
    color: var(--cas-theme-osf-disabled-dark, #cccccc);
}

.mdc-top-app-bar__row .cas-brand-name {
    font-weight: bold;
    color: #F7F7F7;
}

.mdc-top-app-bar__row .hidden-narrow,
.service-ui .osf-shield-with-name .hidden-narrow {
    font-weight: normal;
}

.login-section,
.login-error-card {
    border: none;
    width: 512px;
}

.login-error-card {
    padding: 2rem 2.5rem;
    flex: 1;
}

#serviceui {
    background-color: transparent;
}

.service-ui {
    margin-top: 1rem!important;
    margin-bottom: 1rem!important;
}

.service-ui .service-ui-logo {
    max-height: 56px;
    max-width: 360px;
}

.service-ui .service-ui-logo-branded {
    max-height: 48px;
    max-width: 360px;
}

.service-ui .osf-shield-with-name {
    margin: 0 auto;
    padding-bottom: 1rem;
}

.osf-shield-with-name-branded {
    width: 1px;
}

.osf-shield-with-name .service-ui-logo {
    padding-right: 0.5rem;
}

.osf-shield-with-name .service-ui-logo-branded {
    padding-right: 1rem;
}

.osf-shield-with-name .service-ui-name {
    font-size: 2.25rem;
    font-weight: bold;
}

.osf-shield-with-name .service-ui-name-branded {
    font-size: 2rem;
    font-weight: normal;
    white-space: nowrap;
}

.text-with-mdi,
.text-without-mdi {
    font-size: 1rem;
    margin: 0.5rem 0;
}

.mdi-before-text {
    font-size: inherit;
    vertical-align: text-bottom;
    margin-right: 0.5rem;
}

.mdi-before-text:before {
    font-size: inherit;
}

.title-danger {
    color: var(--cas-theme-osf-red, #b52b27);
}

.text-no-wrap {
    white-space: nowrap;
}

.text-bold {
    font-weight: bold;
}

.text-large {
    font-size: 1.125rem;
}

.margin-large-vertical {
    margin: 1rem 0;
}

.hidden-button,
.hidden-details {
    display: none;
}

.form-button-inline .delegation-button-logo {
    position: absolute;
    left: 4px;
    top: 12px;
    padding: 6px;
    height: 36px;
}

.form-button-inline .delegation-button-label {
    font-size: 0.875rem;
    color: black;
    white-space: nowrap;
    padding-left: 28px;
}

.form-button .delegation-button-logo {
    position: absolute;
    left: 20px;
    top: 11px;
    padding: 2px;
    height: 36px;
}

.form-button .delegation-button-label {
    font-size: 1rem;
    color: black;
    white-space: nowrap;
    padding-left: 28px;
}

.login-error-card .form-button {
    padding-top: 1rem;
}

.login-section .mdc-button,
.login-section .mdc-text-field,
.login-error-card .mdc-button,
.login-error-card .mdc-text-field {
    font-size: 1rem;
}

.login-error-card .pre-formatted-small pre {
    font-size: 0.75rem;
    white-space: pre-wrap;
}

.login-section .background-disabled {
    background-color: var(--cas-theme-osf-disabled-dark, #cccccc);
}

.login-section .reveal-password {
    background-color: var(--cas-theme-osf-blue, #1b6d85);
}

.login-section .login-error-list {
    margin-bottom: -0.5rem;
}

.login-section .card-message {
    padding: 1rem 0;
}

.login-instn-card .card-message,
.login-error-card .card-message {
    padding: 0;
}

.login-section .instn-select select {
    width: 100%;
    height: 56px;
    font-size: 1.125rem;
    margin: 0.5rem 0;
}

.login-error-list .banner {
    border: none;
    position: relative;
}

.login-error-list .banner-dismissible {
    background-color: transparent;
    color: var(--cas-theme-osf-red, #b52b27);
    margin: -0.5rem 0;
}

.login-error-list .login-error-inline {
    margin: 0.25rem 0;
}

.cas-field-primary {
    margin-bottom: 1rem!important;
    margin-top: 0.5rem!important;
}

.cas-field-col-2 {
    margin-top: 1rem!important;
    margin-bottom: 1.5rem!important;
}

.cas-field-float-left {
    float: left;
}

.cas-field-float-right {
    float: right;
}

.cas-footer-osf {
    text-align: center;
    background: var(--cas-theme-osf-footer, #efefef);
}
/* ... */

